fix: Pass explicit width to <Truncate> to ensure correct width is used

--- a/packages/ui/src/components/display-field/display-field.module.css
+++ b/packages/ui/src/components/display-field/display-field.module.css
@@ -55,6 +55,10 @@
   @apply overflow-x-auto;
 }
 
+.overflow-hidden {
+  @apply overflow-hidden;
+}
+
 .slot {
   @apply pt-(--radius-md) -mt-(--radius-md) relative;
   @apply bg-card-background rounded-b-md;
